--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,79 @@
-#brainpic {
+/*#brainpic {
   opacity: 0.3;
   width: 100%;
   z-index: 1;
   position: fixed;
+}*/
+
+
+body {
+  font-family: 'Lato', sans-serif;
+  position: relative;
+}
+
+.header-photo {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  text-align: center;
+  background: url("brainpic.jpg");
+  background-size: cover;
+  background-position: 50% 0%;
+}
+
+.header-photo:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background-color: rgba(21, 21, 21, .6);
+}
+
+.container-text {
+  max-width: 80%;
+  width: 960px;
+  margin: 0 auto;
+  line-height: 1.5;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 60px;
+}
+
+.article {
+  position: absolute;
+  bottom: 120px;
+  z-index: 2;
+  color: white;
+  width: 100%;
+  padding-bottom: 20px;
+}
+
+.title {
+  font-size: 80px;
+  font-weight: 700;
+  position: relative;
+  color: white;
+}
+
+.subtitle {
+  font-weight: 300;
+  font-size: 22px;
+  padding-top: 10px;
+  color: rgba(255, 255, 255, .6);
+}
+
+.intro {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 22px;
+  font-family: 'Noto Serif', serif;
+}
+
+.plain-text {
+  padding: 0px 70px;
+  text-align: left;
+  font-weight: 300;
 }
