--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 a
 {
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 #body_back {
@@ -26,6 +26,7 @@ a
 .card
 {
     z-index: 1;
+    border-radius: 25px;
     position: relative;
     width: 300px;
     height:400px;
@@ -52,6 +53,8 @@ a
 .banner
 {
     z-index: 2;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
     position: relative;
     margin-top: -154px;
     width:100%;
@@ -207,7 +210,7 @@ button.contact:focus
 {
     height: 0;
     overflow: hidden;
-    /*    background-color: #C7D0E1;*/
+    /*    background-color: #C7D0E1;
     width: 300px;
     z-index:-1;
     -webkit-transition: all 0.5s ease-in-out;
@@ -232,7 +235,7 @@ button.contact:focus
 {
     width: 200px;
     text-transform: capitalize;
-    /*    background-color: #a4acbc;*/
+    /*    background-color: #a4acbc;
     margin: 0 auto;
     font-family: inherit;
     border: 1px solid #dadee5;
@@ -279,3 +282,15 @@ button.contact:focus
 {
     margin-top: 40px;
 }
+
+.resume-tooltip {
+    display: inline;
+}
+
+ 
+@media screen and (min-width: 768px) {
+    
+    #myModal .modal-dialog  {width:1000px;}
+
+}
+*/*/
