add centered labels to email

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ button.contact
     border:none;
     background-color: transparent;
     font-family: inherit;
+    z-index: 1
     color: white;
     background-color: #C7D0E1;
     font-size:12px;
@@ -208,55 +209,6 @@ button.contact:focus
     color:#979da8;
 }
 
-.email-form
-{
-    height: 0;
-    overflow: hidden;
-    /*    background-color: #C7D0E1;
-    width: 300px;
-    z-index:-1;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition:    all 0.5s ease-in-out;
-    -o-transition:      all 0.5s ease-in-out;
-    -ms-transition:     all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-}
-
-.email-form.active
-{
-    height: 310px;
-    z-index: 3;
-    -webkit-transition: all 1s ease-in-out;
-    -moz-transition:    all 1s ease-in-out;
-    -o-transition:      all 1s ease-in-out;
-    -ms-transition:     all 1s ease-in-out;
-    transition: all 1s ease-in-out;
-}
-
-.email-form input
-{
-    width: 200px;
-    text-transform: capitalize;
-    /*    background-color: #a4acbc;
-    margin: 0 auto;
-    font-family: inherit;
-    border: 1px solid #dadee5;
-    /*    border: 1px solid black;*/
-    margin-top: 15px;
-    height: 30px;
-    display: block;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition:    all 0.2s ease-in-out;
-    -o-transition:      all 0.2s ease-in-out;
-    -ms-transition:     all 0.2s ease-in-out;
-}
-.email-form input:focus,.email-form textarea:focus
-{
-    /*    border: none;*/
-    border: 1px solid grey;
-    outline: none;
-    
-}
 ::-webkit-input-placeholder 
 {
    font-size: 12px;
@@ -292,5 +244,16 @@ button.contact:focus
  
 @media screen and (min-width: 768px) {
     #myModal .modal-dialog  {width:1000px;}
+}
+
+.email-btn {
+    color: grey !important;
+    align-content: center !important;
+    margin: auto !important;
+    margin-left: 130px !important;
+}
+
+.email-btn:hover {
+    color: black !important
 }
 */*/
